--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/portf/images/user.png" alt="">
+                    <img src="resume/pic/user.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -108,7 +108,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/portf/images/work-1.png">
+                <img src="resume/pic/work-1.png">
                 <div class="layer">
                     <h3>Social Media Apps</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/portf/images/work-2.png">
+                <img src="resume/pic/work-2.png">
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/portf/images/work-3.png">
+                <img src="resume/pic/work-3.png">
                 <div class="layer">
                     <h3>online shoping App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -148,7 +148,7 @@
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
             </div>
-            <a href="/portf/images/my-cv.pdf" download  class="btn btn2">Download CV</a>
+            <a href="resume/pic/my-cv.pdf" download  class="btn btn2">Download CV</a>
         </div>
         <div class="contact-right">
             <form name="submit-to-google-sheet">
