--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing web/app interface</li>
+                                li><span>Google Cloud Practioner</span><br>Learning about google cloud platform</li>
                                 <li><span>Web Development</span><br>Web app Develpoment</li>
-                                <li><span>App Development</span><br>Building Android/ios app</li>
+                                <li><span>Graphic Designer</span><br>Design commercial illustrations and graphics</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing web/app interface</li>
-                                <li><span>Web Development</span><br>Web app Develpoment</li>
-                                <li><span>App Development</span><br>Building Android/ios app</li>
+                                <li><span>Google Cloud Practioner</span><br>1+ year</li>
+                                <li><span>Web Development</span><br>1+ year</li>
+                                <li><span>Graphic Designer</span><br>3+ year Owner Graphixcy</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>UI</span><br>Designing web/app interface</li>
-                                <li><span>Web </span><br>Web app Develpoment</li>
-                                <li><span>App  </span><br>Building Android/ios app</li>
+                                <li><span>B.Tech IT(pursuing)</span><br>A.D. Patel Institute of Technology,Anand</li>
+                                <li><span>11-12</span><br>The Radiant International School,Surat</li>
+                                <li><span>1-10</span><br>J.H. Ambani Saraswati Vidhyamandir,Surat</li>
                             </ul>
                         </div>
                 </div>
@@ -81,15 +81,13 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Adipisci inventore cupiditate corporis, sunt quasi qui temporibus officia, tenetur omnis excepturi facere voluptatum maxime fugit voluptate tempora magnam, esse repellendus repellat!</p>
+                    <p>Desiging comercial website for e-commerce, startups, portfolio website, product website for freelancer's etc</p>
                         <a href="'#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Web Design2</h2>
-                    <p>Lorem ipsum3, dolor sit amet consectetur adipisicing elit. 
-                        Adipisci inventore cupiditate corporis, sunt quasi qui temporibus officia, tenetur omnis excepturi facere voluptatum maxime fugit voluptate tempora magnam, esse repellendus repellat!</p>
+                    <h2>Google Cloud</h2>
+                    <p>Working upon diffrent services on google cloud like terraform, api, +</p>
                         <a href="'#">Learn more</a>
                 </div>
                 <div>
@@ -137,28 +135,29 @@
 </div>
 <!-- -------------------contact------------ -->
 <div id="contact">
-    <div class="row">
-        <div class="contact-left">
-            <h1 class="sub-title">Contact me</h1>
-            <p><i class="fa-solid fa-paper-plane"></i>contact@gmail.com</p>
-            <p><i class="fa-solid fa-phone"></i>0123456789</p>
-            <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i>contact@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>0123456789</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/harshmistry7104"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+                <a href="/resume/pic/my-cv.pdf" download  class="btn btn2">Download CV</a>
             </div>
-            <a href="/resume/pic/my-cv.pdf" download  class="btn btn2">Download CV</a>
+            <div class="contact-right">
+                <form name="submit-to-google-sheet">
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="Email" placeholder="Your email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="Submit" class="btn btn2">Submit </button>
+                </form>
+            </div>
         </div>
-        <div class="contact-right">
-            <form name="submit-to-google-sheet">
-                <input type="text" name="Name" placeholder="Your Name" required>
-                <input type="email" name="Email" placeholder="Your email" required>
-                <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                <button type="submit" class="btn btn2">Submit<button>
-            </form>
-        </div>
-    </div>
     <div class="copyright">
         <p>Copyright Graphixcy</p>
     </div>
