--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                 </form>
             </div>
         </div>
+    </div>    
     <div class="copyright">
         <p>Copyright Graphixcy</p>
     </div>
