updated with changed data

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/resume/pic/logo2.png" class="logo">
+                <img src="/portf/logo2.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,11 +38,8 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Quis reprehenderit fugiat consequatur minus dolores 
-                         similique, eligendi esse velit rem dicta voluptate 
-                         nobis ducimus laboriosam qui alias consequuntur vel 
-                         labore mollitia.</p>
+                    <p>
+                        I am a 1<sup>st</strong></sup> year B.Tech IT student at  A.D. Patel Institute of Technology,Anand. </p>
 
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -51,7 +48,7 @@
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                li><span>Google Cloud Practioner</span><br>Learning about google cloud platform</li>
+                                <li><span>Google Cloud Practioner</span><br>Learning about google cloud platform</li>
                                 <li><span>Web Development</span><br>Web app Develpoment</li>
                                 <li><span>Graphic Designer</span><br>Design commercial illustrations and graphics</li>
                             </ul>
@@ -106,7 +103,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/resume/pic/work-1.png">
+                <img src="/portf/images/work-1.png">
                 <div class="layer">
                     <h3>Social Media Apps</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -114,7 +111,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/resume/pic/work-2.png">
+                <img src="/portf/images/work-2.png">
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -122,7 +119,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/resume/pic/work-3.png">
+                <img src="/portf/images/work-3.png">
                 <div class="layer">
                     <h3>online shoping App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -147,7 +144,7 @@
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 </div>
-                <a href="/resume/pic/my-cv.pdf" download  class="btn btn2">Download CV</a>
+                <a href="/portf/images/my-cv.pdf" download  class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -158,7 +155,7 @@
                 </form>
             </div>
         </div>
-    </div>    
+    </div>
     <div class="copyright">
         <p>Copyright Graphixcy</p>
     </div>
