--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/portf/logo2.png" class="logo">
+                <img src="/resume/pic/logo2.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
