--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/portf/images/work-1.png">
+                <img src="/resume/pic/work-1.png">
                 <div class="layer">
                     <h3>Social Media Apps</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/portf/images/work-2.png">
+                <img src="/resume/pic/work-2.png">
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/portf/images/work-3.png">
+                <img src="/resume/pic/work-3.png">
                 <div class="layer">
                     <h3>online shoping App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
