--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <ul>
                                 <li><span>Google Cloud Practioner</span><br>1+ year</li>
                                 <li><span>Web Development</span><br>1+ year</li>
-                                <li><span>Graphic Designer</span><br>3+ year Owner Graphixcy</li>
+                                <li><span>Graphic Designer</span><br>3+ year Owner <a href="https://www.instagram.com/graphixcy/">Graphixcy</a></li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
