--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Graphixcy</title>
     <script src="https://kit.fontawesome.com/fd9e0662bc.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
 <body>
     <div id="header">
@@ -17,13 +19,21 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#Portfolio">Portfolio</a></li>
+                    <li><a href="#resume">Resume</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fas fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
+                <!-- <div class="wrapper">
+                    <div class="static-txt"></div>
+                    <ul class="dynamic-txts">
+                        <li><span>Front-end Developer</span></li>
+                        <li><span>Graphic Designer</span></li>
+                        <li><span>Freelancer</span></li>
+                    </ul>
+                </div> -->
                 <p>Graphic Deisgner</p>
                 <h1>Hi,I'm <span>Harsh</span><br> Mistry From Surat</h1>
             </div>
@@ -39,7 +49,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>
-                        I am a 1<sup>st</strong></sup> year B.Tech IT student at  A.D. Patel Institute of Technology,Anand. </p>
+                        Welcome to my world of boundless possibilities! I am a passionate and versatile individual pursuing a Bachelor of Technology. With a magical blend of skills in graphic design, web development, and app development, I transform ideas into captivating digital realities. Immerse yourself in my portfolio and witness the seamless harmony between stunning visuals and cutting-edge technology. Let's embark on an extraordinary journey of innovation and creativity together.</p>
 
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -76,29 +86,28 @@
             <h1 class="sub-title">My Service</h1>
             <div class="services-list">
                 <div>
-                    <i class="fa-solid fa-code"></i>
+                    <i class='bx bx-code-alt'></i>
                     <h2>Web Design</h2>
-                    <p>Desiging comercial website for e-commerce, startups, portfolio website, product website for freelancer's etc</p>
-                        <a href="'#">Learn more</a>
+                    <p>Discover our exceptional services! From cutting-edge web design to seamless development and beyond, we've got you covered. Let us bring your online vision to life with our expertise and passion.</p>
+                        <a href="\resume\undercons.html">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-solid fa-crop-simple"></i>
+                    <i class='bx bxs-cloud'></i>
                     <h2>Google Cloud</h2>
-                    <p>Working upon diffrent services on google cloud like terraform, api, +</p>
-                        <a href="'#">Learn more</a>
+                    <p>"Unlock the limitless possibilities of Google Cloud through my portfolio. Witness my mastery in leveraging its advanced technologies to optimize infrastructure, enable data-driven insights, and propel businesses forward. Explore the realm of cloud innovation with me."</p>
+                        <a href="\resume\undercons.html">Learn more</a>
                 </div>
                 <div>
-                    <i class="fa-regular fa-browser"></i>
-                    <h2>Web Design3</h2>
-                    <p>Lorem ipsum1, dolor sit amet consectetur adipisicing elit. 
-                        Adipisci inventore cupiditate corporis, sunt quasi qui temporibus officia, tenetur omnis excepturi facere voluptatum maxime fugit voluptate tempora magnam, esse repellendus repellat!</p>
-                        <a href="'#">Learn more</a>
+                    <i class='bx bx-paint'></i>
+                    <h2>Graphic Design</h2>
+                    <p>Step into my vibrant world of graphic design. Witness a kaleidoscope of colors, shapes, and creativity. From eye-catching logos to mesmerizing illustrations, my portfolio is a testament to the power of visual storytelling. Let's make your brand stand out with captivating designs</p>
+                        <a href="index2.html">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
-<!-- -----------------portfolio----------------- -->
-<div id="Portfolio">
+<!-- -----------------resume----------------- -->
+<div id="resumeolio">
     <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
@@ -107,7 +116,7 @@
                 <div class="layer">
                     <h3>Social Media Apps</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="\resume\undercons.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -115,7 +124,7 @@
                 <div class="layer">
                     <h3>Music App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="\resume\undercons.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -123,7 +132,7 @@
                 <div class="layer">
                     <h3>online shoping App</h3>
                     <p>The app conects you to the talented people around the world. Download from playstore</p>
-                    <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="\resume\undercons.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -136,15 +145,15 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>contact@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>0123456789</p>
+                <p><i class="fa-solid fa-paper-plane"></i>Graphicsdaily2022@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>+91 7016400310</p>
                 <div class="social-icons">
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/harshmistry7104"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 </div>
-                <a href="/portf/images/my-cv.pdf" download  class="btn btn2">Download CV</a>
+                <a href="/resume/pic/my-cv.pdf" download  class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
@@ -153,6 +162,7 @@
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="Submit" class="btn btn2">Submit </button>
                 </form>
+                <span id="msg"></span>
             </div>
         </div>
     </div>
@@ -185,15 +195,22 @@
     }
 </script> 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbyu-xuCl1zigdjRiPH97AEvVxzb4W3AdCWfx1M8QcYqDXGz_9wgsTl9dkWQmyGL6SzF/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyup2Fs6xYBote1pfzZfkap1TRUi4Eh4bQjlZU6sI1n8_58TfJ4IsDdm3ZkLvKVqwoAMA/exec'
     const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
   
+
     form.addEventListener('submit', e => {
       e.preventDefault()
       fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => console.log('Success!', response))
+        .then(response =>{ msg.innerHTML = "Message sent succesfully"
+        setTimeout(function(){
+            msg.innerHTML = ""
+        },2000)
+        form.reset()
+    })
         .catch(error => console.error('Error!', error.message))
     })
-  </script>  
+</script>
 </body>
 </html>
