--- a/undercons.html
+++ b/undercons.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="/resume/logo2.png" class="logo">
+        <img src="/resume/pic/logo2.png" class="logo">
         <nav>
             <ul>
                 <li><a href="\resume\index.html">Home</a></li>
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <section>
-        <img src="/resume/conspic/curveo.png" class="wave">
+        <img src="/resume/pic/conspic/curveo.png" class="wave">
         <div class="contentBx">
             <h2>Coming Soon..</h2>
             <p>"Oops! Our website is taking a siesta and enjoying a 
