--- a/undercons.html
+++ b/undercons.html
@@ -28,7 +28,7 @@
             <a href="#" onclick="toggle()";>Notify ME!</a>
         </div>
         <div class="imgBx">
-            <img src="/resume/conspic/man.png">
+            <img src="/resume/pic/conspic/man.png">
         </div>
         <ul class="sci">
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
